--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.0",
     "pg": "^8.9.0",
