--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.2.11",
     "react-input-pin-code": "^1.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.5",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-image-gallery": "^1.2.0",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
