--- a/client/package.json
+++ b/client/package.json
@@ -32,12 +32,14 @@
     "react-toastify": "^9.1.1",
     "react-webcam": "^7.0.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "unidecode": "^0.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/react-image-gallery": "^1.2.0",
+    "@types/unidecode": "^0.1.1",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
