--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/nodemon": "^1.19.2",
     "@types/sequelize": "^4.28.14",
+    "@types/unidecode": "^0.1.1",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
@@ -33,6 +34,7 @@
     "nodemailer": "^6.9.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.2"
+    "sequelize": "^6.28.2",
+    "unidecode": "^0.1.8"
   }
 }
