--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "@types/react-image-gallery": "^1.2.0",
     "@types/unidecode": "^0.1.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "prettier": "2.8.8",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
