--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,8 @@
     "moment": "^2.29.4",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
+    "react-date-countdown-timer": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.2.11",
     "react-input-pin-code": "^1.2.0",
